--- a/.github/workflows/main_dating-app-course.yml
+++ b/.github/workflows/main_dating-app-course.yml
@@ -18,10 +18,24 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Set up node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "23"
+
+      - name: Install Angular CLI
+        run: npm install -g @angular/cli@19
+
+      - name: Install deps and build angular app
+        run: |
+          cd client 
+          npm install 
+          ng build
+
       - name: Set up .NET Core
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 'v8.0'
+          dotnet-version: "v8.0"
 
       - name: Build with dotnet
         run: dotnet build --configuration Release
@@ -39,7 +53,7 @@ jobs:
     runs-on: windows-latest
     needs: build
     environment:
-      name: 'Production'
+      name: "Production"
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
     permissions:
       id-token: write #This is required for requesting the JWT
@@ -50,7 +64,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: .net-app
-      
+
       - name: Login to Azure
         uses: azure/login@v2
         with:
@@ -62,7 +76,6 @@ jobs:
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v3
         with:
-          app-name: 'dating-app-course'
-          slot-name: 'Production'
+          app-name: "dating-app-course"
+          slot-name: "Production"
           package: .
-          
